--- a/css/style.css
+++ b/css/style.css
@@ -189,12 +189,15 @@ form:enabled{
     font-size: 35px;
     line-height: 1.2em;
 }
+#showcase2 .showcase-content a {
+    margin:auto;
+}
 #showcase2 .container {
    
     max-width:1000px;
-    overflow:auto;
-    padding: 0 20px;
+   
 }
+
 #showcase .showcase-content p {
     padding-bottom: 20px;
     line-height: 1.7em;
